--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@node-saml/passport-saml": "^4.0.4",
     "axios": "^1.0.0",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "express": "~4.18.1",
+    "express-session": "^1.17.3",
+    "passport": "^0.7.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -19,7 +24,10 @@
     "@nx/workspace": "17.2.8",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
+    "@types/body-parser": "^1.19.5",
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "~4.17.13",
+    "@types/express-session": "^1.17.10",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
