--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "axios": "^1.0.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "express": "~4.18.1",
+    "express": "^4.19.2",
     "express-session": "^1.17.3",
     "passport": "^0.7.0",
     "tslib": "^2.3.0"
